--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="referrer" content="origin">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/ezservice logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
